# Minelexa

./: .breakpoints  .replit  README.md  aplDetails.json  helloworldDocument.json  helloworldWithButtonDocument.json  inspirational_quotes.csv  intents.py  jsonModifier.py  main.py  pyproject.toml  test.json
