[tool.poetry]
name = "replexa-cloud-functions"
version = "0.1.0"
description = ""
authors = ["Mohammad Awwad <mohd-awwad@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ask-sdk-webservice-support = "^1.3.2"
flask = "^2.0.1"
flask-ask-sdk = "^1.0.0"
discord = "^1.7.3"
boto3 = "^1.17.98"
botocore = "^1.20.98"
coinbase = "^2.1.0"
feedparser = "^6.0.8"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
